--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -1,5 +1,9 @@
 Name: Reuse other workflow
 
+on:
+  workflow_dispatch:
+    
+
 jobs:
   call-workflow:
     uses: ./.github/workflows/reusable.yml
